--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "canvas-confetti": "1.6.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
+  },
+  "devDependencies": {
+    "standard": "^17.0.0"
   }
 }
